--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,13 @@
 {
-  "presets": ["@babel/preset-env"],
-  "plugins": []
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "browsers": "last 2 versions, > 5%",
+          "esmodules": true
+        }
+      }
+    ]
+  ]
 }
