--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^2.0.0",
+    "svg-sprite-loader": "^6.0.11",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   }
